# VPS-Studio

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  dependency-review.yml  release.yml
docs/: README.md  architecture.md  configuration.md  dependency-audit.md  deployment.md  development.md  faq.md  installation.md  open-source-readiness.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  terminal.rs
src-tauri/src/commands/: command_library.rs  cron.rs  dashboard.rs  docker.rs  files.rs  firewall.rs  logs.rs  mod.rs  packages.rs  processes.rs  servers.rs  services.rs  snapshots.rs  ssh_keys.rs  terminal.rs  validation.rs  workspaces.rs
src-tauri/src/commands/settings/: commands.rs  mod.rs
src-tauri/src/db/: crypto.rs  keychain.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: 001_init.sql  002_dashboard.sql
src-tauri/src/db/queries/: dashboard.rs  mod.rs  servers.rs  tags.rs
src-tauri/src/notifications/: commands.rs  engine.rs  mod.rs  rules.rs
src-tauri/src/ssh/: commands.rs  connection.rs  cron.rs  docker.rs  firewall.rs  keys.rs  logs.rs  mod.rs  packages.rs  processes.rs  services.rs  sftp.rs  snapshots.rs  workspaces.rs
src/hooks/: use-ipc.ts
src/lib/: command-types.ts  cron-types.ts  docker-types.ts  (+14 more)
(+74 files in other folders)
